Import various updates (#15)
* code cleaning

* changing semantics of "whitelisting": the current functionality is not about whitelisting, but about just removing a Peer from the Blacklist.

* fixing issues when updating the internal State of the BlacklistHandler and some tests.

* cleaning code for existing Blacklist functionality

* implementation of Whitelist Functionality

* adding utility methods to facilitate the conversion between Msg and Bean classes

* adding logic to process incoming unannounced Blocks. And tests

* upgrading version to 2.3.0-SNAPSHOT

* bugfix.

* removing unused file

* Added saveTxHashes functionality to BlockStore

* Added tests

* adding operations to Serialize Signed Ints.
Modifying Serialization of VersionMsg to treat start_height as a SIGNED Int

* bugfix in the NotFoundMsg

* Added functionality to remove half saved blocks

* Improved code clarity + test fix

* hotfix in the "start_height" field validation in VERSION Msg

* Added removal of TxHashes file when removing block

* Blacklist peer add to list first seen ip fix.

* BlockMsg command must be lowercase

* Fixed incorrect modifier when reading txs

* adding logging detail

* fixing a race condition when a Peer handshakes and right after that it disconnects

* using "_remove()" private method in prune()

* removing the CONNECTION REJECTED as a Criteria for Blacklisting a Peer

* disabling test likely to fail in the future due to out-of-date peers

* bugfix: Blocks might be downloaded more than once. Now a block is not processed if its
already in the "pending" list.
plus some modifications/adjustments/improvments in the Test to cehck the behaviour when the download is PAUSED

* bugfix in the BigCollectionChunksStoreCMap3:
 .ConcurrentModificationException, fixed after adding ReadWriteLocks.
 .Problem with Big Txs, fixed after changing the way the size is saved in the MAp for each item (now we use 4 bytes at the beginni